--- a/fesapade/src/app/components/administrador/administrador.component.html
+++ b/fesapade/src/app/components/administrador/administrador.component.html
@@ -36,8 +36,12 @@
             <br>
           </div>
         </div>
-
-        <table class="table table-hover">
+        <br>
+        <label>Buscar empleado:</label>    
+        <div class="form-group mb-4">
+          <input class="form-control" type="text" [(ngModel)]="texto" placeholder="Ingrese un nombre, apellido o correo">
+        </div>
+        <table class="table table-hover" *ngIf="(empleados | buscadorList: texto).length > 0; else noResults">
           <thead>
             <tr>
               <th scope="col">Nombre</th>
@@ -49,7 +53,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let emps of empleados">
+            <tr *ngFor="let emps of empleados | buscadorList: texto">
               <th scope="row">{{emps.nombre+' '+emps.apellido}}</th>
               <td>{{emps.email}}</td>
               <td>{{emps.direccion}}</td>
@@ -69,6 +73,9 @@
             </tr>
           </tbody>
         </table>
+        <ng-template #noResults>
+          <p>No hay resultados para: "{{texto}}".</p>
+        </ng-template>
         <!-- MAIN TITLE ENDS HERE -->
 
 
