--- a/fesapade/src/app/components/administrarcursos/administrarcursos.component.html
+++ b/fesapade/src/app/components/administrarcursos/administrarcursos.component.html
@@ -36,8 +36,12 @@
                         <br>
                     </div>
                 </div>
-
-                <table class="table table-hover">
+                <br>
+                <label>Buscar curso:</label>    
+                <div class="form-group mb-4">
+                  <input class="form-control" type="text" [(ngModel)]="texto" placeholder="Ingrese el nombre del curso">
+                </div>
+                <table class="table table-hover" *ngIf="(cursos | buscadorListCursos: texto).length > 0; else noResults">
                     <thead>
                         <tr>
                             <th scope="col">Curso</th>
@@ -47,7 +51,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let curs of cursos">
+                        <tr *ngFor="let curs of cursos | buscadorListCursos: texto">
                             <th scope="row">{{curs.nombre}}</th>
                             <td>{{curs.descripcion}}</td>
                             <td>{{curs.estado}}</td>
@@ -71,6 +75,9 @@
 
                     </tbody>
                 </table>
+                <ng-template #noResults>
+                    <p>No hay resultados para: "{{texto}}".</p>
+                  </ng-template>
                 <!-- MAIN TITLE ENDS HERE -->
 
 
