--- a/fesapade/src/app/components/administrarfederado/administrarfederado.component.html
+++ b/fesapade/src/app/components/administrarfederado/administrarfederado.component.html
@@ -36,8 +36,12 @@
             <br>
           </div>
         </div>
-
-        <table class="table table-hover">
+        <br>
+        <label>Buscar federado:</label>    
+        <div class="form-group mb-4">
+          <input class="form-control" type="text" [(ngModel)]="texto" placeholder="Ingrese un nombre, apellido o correo">
+        </div>
+        <table class="table table-hover " *ngIf="(federados | buscadorListFederado: texto).length > 0; else noResults">
           <thead>
             <tr>
               <th scope="col">Nombre</th>
@@ -49,7 +53,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let feds of federados">
+            <tr *ngFor="let feds of federados  | buscadorListFederado: texto">
               <th scope="row">{{feds.nombre+' '+feds.apellido}}</th>
               <td>{{feds.email}}</td>
               <td>{{feds.direccion}}</td>
@@ -68,6 +72,9 @@
             </tr>
           </tbody>
         </table>
+        <ng-template #noResults>
+          <p>No hay resultados para: "{{texto}}".</p>
+        </ng-template>
         <!-- MAIN TITLE ENDS HERE -->
 
 
