--- a/fesapade/src/app/components/editarperfederado/editarperfederado.component.html
+++ b/fesapade/src/app/components/editarperfederado/editarperfederado.component.html
@@ -46,7 +46,7 @@
                         <div class="form-row">
                             <div class="form-group col-md-5">
                                 <label for="formGroupExampleInput">Nombres</label>
-                                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control" #nomC="ngModel"
+                                <input type="text" required pattern="^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]+$" class="form-control" #nomC="ngModel"
                                     id="formGroupExampleInput" autocomplete="off" [(ngModel)]="feds.nombre"
                                     name="nombre">
                                 <div *ngIf="(nomC.invalid && (nomC.dirty || nomC.touched))">
@@ -57,7 +57,7 @@
                             </div>
                             <div class="form-group col-md-5">
                                 <label for="formGroupExampleInput">Apellidos</label>
-                                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control"
+                                <input type="text" required pattern="^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]+$" class="form-control"
                                     #apelC="ngModel" id="formGroupExampleInput1" autocomplete="off"
                                     [(ngModel)]="feds.apellido" name="apellido">
                                 <div *ngIf="(apelC.invalid && (apelC.dirty || apelC.touched))">
