--- a/fesapade/src/app/components/editarperfiladmin/editarperfiladmin.component.html
+++ b/fesapade/src/app/components/editarperfiladmin/editarperfiladmin.component.html
@@ -44,7 +44,7 @@
             <div class="form-row">
               <div class="form-group col-md-5">
                 <label for="formGroupExampleInput">Nombres</label>
-                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control" #nomC="ngModel"
+                <input type="text" required pattern="^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]+$" class="form-control" #nomC="ngModel"
                   id="formGroupExampleInput" autocomplete="off" [(ngModel)]="emps.nombre" name="nombre">
                 <div *ngIf="(nomC.invalid && (nomC.dirty || nomC.touched))">
                   <p class="text-danger" *ngIf="nomC.errors.pattern">Solo se permiten letras</p>
@@ -54,7 +54,7 @@
               </div>
               <div class="form-group col-md-5">
                 <label for="formGroupExampleInput">Apellidos</label>
-                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control" #apelC="ngModel"
+                <input type="text" required pattern="^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]+$" class="form-control" #apelC="ngModel"
                   id="formGroupExampleInput1" autocomplete="off" [(ngModel)]="emps.apellido" name="apellido">
                 <div *ngIf="(apelC.invalid && (apelC.dirty || apelC.touched))">
                   <p class="text-danger" *ngIf="apelC.errors.pattern">Solo se permiten letras</p>
